--- a/.github/workflows/run-on-main.yml
+++ b/.github/workflows/run-on-main.yml
@@ -32,6 +32,39 @@ jobs:
       - name: Build application
         run: mvn clean package -DskipTests
 
+      - name: Get next version
+        id: version
+        run: |
+          # Fetch all tags
+          git fetch --tags
+          
+          # Get the latest tag (assumes semantic versioning like v1.0.0)
+          LATEST_TAG=$(git tag -l "v*" | sort -V | tail -n1)
+          
+          if [ -z "$LATEST_TAG" ]; then
+            # No tags exist, start with v1.0.0
+            NEW_TAG="v1.0.0"
+          else
+            # Extract version numbers
+            VERSION=${LATEST_TAG#v}
+            MAJOR=$(echo $VERSION | cut -d. -f1)
+            MINOR=$(echo $VERSION | cut -d. -f2)
+            PATCH=$(echo $VERSION | cut -d. -f3)
+          
+            # Increment patch version
+            PATCH=$((PATCH + 1))
+            NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
+          fi
+          
+          echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
+          echo "version=${NEW_TAG#v}" >> $GITHUB_OUTPUT
+          echo "Next version: $NEW_TAG"
+
+      - name: Create and push tag
+        run: |
+          git tag ${{ steps.version.outputs.new_tag }}
+          git push origin ${{ steps.version.outputs.new_tag }}
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -49,6 +82,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/demo:latest
-            ghcr.io/${{ github.repository_owner }}/demo:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/your-app-name:${{ steps.version.outputs.version }}
+            ghcr.io/${{ github.repository_owner }}/your-app-name:${{ steps.version.outputs.new_tag }}
           cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/demo:buildcache
           cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/demo:buildcache,mode=max
