--- a/.github/workflows/run-on-main.yml
+++ b/.github/workflows/run-on-main.yml
@@ -82,7 +82,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/demo:latest
-            ghcr.io/${{ github.repository_owner }}/your-app-name:${{ steps.version.outputs.version }}
-            ghcr.io/${{ github.repository_owner }}/your-app-name:${{ steps.version.outputs.new_tag }}
+            ghcr.io/${{ github.repository_owner }}/demo:${{ steps.version.outputs.version }}
+            ghcr.io/${{ github.repository_owner }}/demo:${{ steps.version.outputs.new_tag }}
           cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/demo:buildcache
           cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/demo:buildcache,mode=max
