--- a/k8s/k8s-config.yaml
+++ b/k8s/k8s-config.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo-app
+  name: development
 
 ---
 # Deployment
@@ -11,7 +11,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-app
-  namespace: demo-app
+  namespace: development
   labels:
     app: demo-app
 spec:
@@ -60,7 +60,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo-app-service
-  namespace: demo-app
+  namespace: development
 spec:
   type: ClusterIP
   selector:
@@ -75,7 +75,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: demo-app-ingress
-  namespace: demo-app
+  namespace: development
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -97,7 +97,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: demo-app-hpa
-  namespace: demo-app
+  namespace: development
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
