--- a/.github/workflows/run-on-push-tag.yml
+++ b/.github/workflows/run-on-push-tag.yml
@@ -6,7 +6,7 @@ on:
       - 'v*.*.*'
 
 jobs:
-  build-and-push:
+  docker-build-push:
     runs-on: ubuntu-latest
 
     permissions:
@@ -19,19 +19,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v5
-        with:
-          java-version: '21'
-          distribution: 'corretto'
-          cache: 'maven'
-
-      - name: Run tests
-        run: mvn clean test
-
-      - name: Build application
-        run: mvn clean package -DskipTests
-
       - name: Extract version from tag
         id: version
         run: |
@@ -39,6 +26,7 @@ jobs:
           VERSION=${TAG_NAME#v}
           echo "tag=$TAG_NAME" >> $GITHUB_OUTPUT
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Building version: $VERSION"
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -61,8 +49,3 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/demo:${{ steps.version.outputs.tag }}
           cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/demo:buildcache
           cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/demo:buildcache,mode=max
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          generate_release_notes: true
